--- a/setup.cfg
+++ b/setup.cfg
@@ -15,10 +15,9 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-package_dir =
-    = src
+package_dir = geneticengine
 packages = find:
 python_requires = >=3.9
 
 [options.packages.find]
-where = src
+where = .
