--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,24 @@
+[project]
+name = "GeneticEngine"
+version = "0.0.5"
+description = "Genetic Programming with Types and Grammars"
+authors = [
+    "Alcides Fonseca <me@alcidesfonseca.com>"
+]
+license = "MIT"
+readme = "README.md"
+python = "^3.9"
+homepage = "https://github.com/alcides/GeneticEngine/"
+repository = "https://github.com/alcides/GeneticEngine/"
+documentation = "https://github.com/alcides/GeneticEngine/"
+
 [build-system]
 requires = [
     "setuptools>=42",
     "wheel"
 ]
 build-backend = "setuptools.build_meta"
+
+[options]
+python_requires = >= 3.9
+packages = geneticengine
