--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "GeneticEngine"
-version = "0.0.5"
+version = "0.0.6"
 description = "Genetic Programming with Types and Grammars"
 authors = [
     "Alcides Fonseca <me@alcidesfonseca.com>"
@@ -20,5 +20,5 @@ requires = [
 build-backend = "setuptools.build_meta"
 
 [options]
-python_requires = >= 3.9
+python_requires = >= 3.9.*
 packages = geneticengine
