--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "GeneticEngine"
-version = "0.0.6"
+version = "0.0.7"
 description = "Genetic Programming with Types and Grammars"
 authors = [
     "Alcides Fonseca <me@alcidesfonseca.com>"
@@ -13,12 +13,7 @@ repository = "https://github.com/alcides/GeneticEngine/"
 documentation = "https://github.com/alcides/GeneticEngine/"
 
 [build-system]
+build-backend = 'setuptools.build_meta'
 requires = [
-    "setuptools>=42",
-    "wheel"
+    'setuptools >= 43.0.0',
 ]
-build-backend = "setuptools.build_meta"
-
-[options]
-python_requires = >= 3.9.*
-packages = geneticengine
