--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,3 +17,9 @@ build-backend = 'setuptools.build_meta'
 requires = [
     'setuptools >= 43.0.0',
 ]
+
+[mypy]
+python_version = "3.9"
+mypy_path = .
+ignore_missing_imports = True
+namespace_packages = True
