More mypy conformity

--- a/mypy.ini
+++ b/mypy.ini
@@ -7,7 +7,7 @@ warn_unused_ignores = True
 
 # Needed because of bug in MyPy
 disallow_subclassing_any = False
-ignore_missing_imports = True
+#ignore_missing_imports = True
 
 mypy_path = stubs
 
@@ -18,4 +18,13 @@ check_untyped_defs = True
 warn_return_any = True
 no_implicit_optional = True
 strict_optional = True
+#ignore_missing_imports = True
+
+[mypy-z3]
+ignore_missing_imports = True
+
+[mypy-numpy]
+ignore_missing_imports = True
+
+[mypy-lark]
 ignore_missing_imports = True
