Added csv creation feature

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 dist
 .vscode
+results/*
+!results/.gitkeep
 
 
 # Created by https://www.toptal.com/developers/gitignore/api/python,venv,pycharm+all
