Fixed mutation bug

--- a/mypy.ini
+++ b/mypy.ini
@@ -28,3 +28,12 @@ ignore_missing_imports = True
 
 [mypy-lark]
 ignore_missing_imports = True
+
+[mypy-pandas]
+ignore_missing_imports = True
+
+[mypy-pylab]
+ignore_missing_imports = True
+
+[mypy-palettable.colorbrewer.qualitative]
+ignore_missing_imports = True
