--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,8 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Lint with mypy
+      run: |
+        mypy geneticengine
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
