--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -25,7 +25,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        cd geneticengine; pip install -e .
+        pip install -e .
     - name: Lint with mypy
       run: |
         mypy geneticengine
