--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,9 @@ classifiers =
 [options]
 packages = find:
 python_requires = >=3.9
+install_requires =
+    z3-solver
+    lark
 
 [options.packages.find]
 where = .
