--- a/mypy.ini
+++ b/mypy.ini
@@ -35,5 +35,8 @@ ignore_missing_imports = True
 [mypy-pylab]
 ignore_missing_imports = True
 
+[mypy-sklearn.base]
+ignore_missing_imports = True
+
 [mypy-palettable.colorbrewer.qualitative]
 ignore_missing_imports = True
