--- a/mypy.ini
+++ b/mypy.ini
@@ -40,3 +40,6 @@ ignore_missing_imports = True
 
 [mypy-palettable.colorbrewer.qualitative]
 ignore_missing_imports = True
+
+[mypy-pathos]
+ignore_missing_imports = True
