--- a/mypy.ini
+++ b/mypy.ini
@@ -41,5 +41,5 @@ ignore_missing_imports = True
 [mypy-palettable.colorbrewer.qualitative]
 ignore_missing_imports = True
 
-[mypy-pathos]
+[mypy-pathos.multiprocessing]
 ignore_missing_imports = True
