--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,10 @@
 lark
-mkdocs
-mkdocs-gen-files
-mkdocs-literate-nav
-mkdocs-section-index
-mkdocstrings[python]
+myst-parser
 numpy
 palettable
 pandas
 pytest
 sklearn
+sphinx
 threadpoolctl==3.1.0
 z3-solver
