--- a/setup.cfg
+++ b/setup.cfg
@@ -26,3 +26,8 @@ python_requires = >=3.9
 
 [options.packages.find]
 where = .
+
+[tool.docformatter]
+recursive = true
+wrap-summaries = 82
+blank = true
