--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -35,3 +35,8 @@ repos:
     rev: v1.5.0
     hooks:
       - id: docformatter
+-   repo: https://github.com/hadialqattan/pycln
+    rev: v2.1.2
+    hooks:
+    -   id: pycln
+        args: [--config=pyproject.toml]
