--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,18 @@ blank = false
 pre-summary-newline = true
 close-quotes-on-newline = true
 wrap-one-line = true
+
+[tool.black]
+line-length = 120
+
+
+[tool.pycln]
+all = true
+
+[tool.isort]
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
