--- a/mypy.ini
+++ b/mypy.ini
@@ -46,3 +46,7 @@ ignore_missing_imports = True
 
 [mypy-pathos.multiprocessing]
 ignore_missing_imports = True
+
+[mypy-pickle]
+ignore_errors = True
+implicit_reexport = True
