--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,16 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v4.3.0
     hooks:
     -   id: check-yaml
+    -   id: check-toml
+    -   id: check-merge-conflict
     -   id: end-of-file-fixer
     -   id: trailing-whitespace
     -   id: check-docstring-first
     -   id: name-tests-test
     -   id: requirements-txt-fixer
+    -   id: mixed-line-ending
 -   repo: https://github.com/psf/black
     rev: 22.3.0
     hooks:
@@ -41,6 +44,7 @@ repos:
     -   id: pycln
         args: [--config=pyproject.toml]
 -   repo: https://github.com/pre-commit/mirrors-mypy
-    rev: v0.812
+    rev: v0.991
     hooks:
     -   id: mypy
+        args: [--no-strict-optional, --ignore-missing-imports]
