--- a/mypy.ini
+++ b/mypy.ini
@@ -20,6 +20,10 @@ no_implicit_optional = True
 strict_optional = True
 #ignore_missing_imports = True
 
+[mypy-seaborn]
+ignore_missing_imports = True
+
+
 [mypy-z3]
 ignore_missing_imports = True
 
