--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,8 +4,11 @@ mypy==0.991
 myst_parser
 pre-commit
 pycln
+pytest
+pytest-cov
 ruff
 sphinx
 sphinx-autoapi
 sphinx-rtd-theme
 sphinxcontrib-fulltoc
+sphinxcontrib-spelling
