--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ authors = [
     {name = "Pedro Barbosa", email = "psbarbosa@ciencias.ulisboa.pt"},
     {name = "Alcides Fonseca", email = "me@alcidesfonseca.com"}
 ]
+maintainers = [
+  {name = "Alcides Fonseca", email = "me@alcidesfonseca.com"}
+]
 readme = "Readme.md"
 requires-python = ">=3.9"
 keywords = ["evolutionary computation, genetic programming, regression, machine learning"]
