--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,7 +59,7 @@ line-length = 120
 
 # Enable Pyflakes `E` and `F` codes by default.
 select = ["E", "F"]
-ignore = []
+ignore = ["E741", "E501"]
 
 # Exclude a variety of commonly ignored directories.
 exclude = [
