--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,14 @@ numpy
 palettable
 pandas
 pathos
+polyleven
 pytest
+scikit-learn
+seaborn
 sklearn
+sphinx
+sphinx-autoapi
+sphinx-rtd-theme
+sphinxcontrib-fulltoc
 threadpoolctl==3.1.0
 z3-solver
