--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "GeneticEngine"
-version = "0.0.30"
+version = "0.6.0"
 description = "Genetic Programming with Types and Grammars"
 authors = [
     {name = "Guilherme Espada", email = "gjespada@fc.ul.pt"},
@@ -19,7 +19,8 @@ keywords = ["evolutionary computation, genetic programming, regression, machine 
 classifiers = [
   "Development Status :: 4 - Beta",
   "Programming Language :: Python :: 3.9",
-  "Programming Language :: Python :: 3.10"
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11"
 ]
 
 [project.urls]
@@ -33,8 +34,11 @@ text = "https://opensource.org/licenses/MIT"
 [build-system]
 build-backend = 'setuptools.build_meta'
 requires = [
-    'setuptools >= 43.0.0',
+    'setuptools >= 67.6.0',
 ]
+
+[tool.setuptools]
+py-modules = ["geneticengine"]
 
 [tool.docformatter]
 syntax = 'google'
