--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,9 +44,10 @@ repos:
     -   id: mypy
         args: [--no-strict-optional, --ignore-missing-imports]
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
-    rev: v0.0.189
+    rev: v0.0.254
     hooks:
       - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
 -   repo: https://github.com/regebro/pyroma
     rev: "4.2"
     hooks:
