--- a/mypy.ini
+++ b/mypy.ini
@@ -54,3 +54,6 @@ ignore_missing_imports = True
 [mypy-pickle]
 ignore_errors = True
 implicit_reexport = True
+
+[mypy-matplotlib.pyplot]
+ignore_missing_imports = True
