--- a/mypy.ini
+++ b/mypy.ini
@@ -55,5 +55,8 @@ ignore_missing_imports = True
 ignore_errors = True
 implicit_reexport = True
 
-[mypy-matplotlib.pyplot]
+[mypy-matplotlib]
+ignore_missing_imports = True
+
+[mypy-matplotlib.*]
 ignore_missing_imports = True
