--- a/mypy.ini
+++ b/mypy.ini
@@ -60,3 +60,7 @@ ignore_missing_imports = True
 
 [mypy-matplotlib.*]
 ignore_missing_imports = True
+
+
+[mypy-pytest]
+ignore_missing_imports = True
