--- a/mypy.ini
+++ b/mypy.ini
@@ -42,6 +42,9 @@ ignore_missing_imports = True
 [mypy-sklearn.base]
 ignore_missing_imports = True
 
+[mypy-sklearn.*]
+ignore_missing_imports = True
+
 [mypy-palettable.colorbrewer.qualitative]
 ignore_missing_imports = True
 
