--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -63,7 +63,8 @@ jobs:
         tool: 'pytest'
         output-file-path: output.json
         # Use personal access token instead of GITHUB_TOKEN due to https://github.community/t/github-action-not-triggering-gh-pages-upon-push/16096
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ secrets.BENCHMARK_REPO_TOKEN }}
+        gh-repository: github.com/alcides/GeneticEngineBenchmarkResults
         auto-push: true
         # Show alert with commit comment on detecting possible performance regression
         alert-threshold: '200%'
