--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ requires = [
 ]
 
 [tool.setuptools]
-py-modules = ["geneticengine"]
+py-modules = ["geneticengine", "geml"]
 
 [tool.docformatter]
 syntax = 'google'
