--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -42,7 +42,7 @@ repos:
     rev: v0.991
     hooks:
     -   id: mypy
-        args: [--no-strict-optional, --ignore-missing-imports]
+        args: [--no-strict-optional, --ignore-missing-imports, --explicit-package-bases]
 -   repo: https://github.com/charliermarsh/ruff-pre-commit
     rev: v0.0.254
     hooks:
