--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -17,7 +17,7 @@ jobs:
         python-version: ["3.9", "3.10", "3.11"]
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4.1.1
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v4
       with:
@@ -30,7 +30,7 @@ jobs:
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Lint with mypy
       run: |
-        mypy geneticengine
+        mypy --no-strict-optional --ignore-missing-imports --explicit-package-bases geneticengine
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
