--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,9 +8,7 @@
 
 name: Upload Python Package
 
-on:
-  release:
-    types: [published]
+on: [push, pull_request]
 
 jobs:
   deploy:
@@ -30,6 +28,7 @@ jobs:
     - name: Build package
       run: python -m build
     - name: Publish package
+      if: github.repository == 'alcides/GeneticEngine' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
       uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
       with:
         user: __token__
