--- a/.github/workflows/python-benchmarking.yml
+++ b/.github/workflows/python-benchmarking.yml
@@ -10,7 +10,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
+  benchmark:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -22,14 +22,12 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Set env
-      run: echo "VIRTUAL_ENV=$(python -c 'import sys; print(sys.prefix)')">> $GITHUB_ENV
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade uv
-        uv pip install flake8 pytest mypy
-        if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
-        if [ -f requirements-dev.txt ]; then uv pip install -r requirements-dev.txt; fi
+        python -m pip install --upgrade pip
+        pip install flake8 pytest mypy
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Check install
       run: |
         pip install -e .
