--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade uv 
+        uv pip install --system
         uv pip install flake8 pytest mypy
         if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then uv pip install -r requirements-dev.txt; fi
