--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -27,10 +27,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade uv 
-        uv pip install --system
-        uv pip install flake8 pytest mypy
-        if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
-        if [ -f requirements-dev.txt ]; then uv pip install -r requirements-dev.txt; fi
+        uv pip install --system flake8 pytest mypy
+        if [ -f requirements.txt ]; then uv pip install --system -r requirements.txt; fi
+        if [ -f requirements-dev.txt ]; then uv pip install --system -r requirements-dev.txt; fi
     - name: Lint with mypy
       run: |
         mypy --no-strict-optional --ignore-missing-imports --explicit-package-bases geneticengine
@@ -42,7 +41,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Check install
       run: |
-        uv pip install -e .
+        uv pip install --system  -e .
     - name: Test with pytest
       run: |
         pytest --cov --benchmark-skip
