--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -21,12 +21,12 @@ jobs:
       uses: actions/setup-python@v5.0.0
       with:
         python-version: '3.x'
-    - name: Set env
-      run: echo "VIRTUAL_ENV=$(python -c 'import sys; print(sys.prefix)')">> $GITHUB_ENV
+    # - name: Set env
+    #   run: echo "VIRTUAL_ENV=$(python -c 'import sys; print(sys.prefix)')">> $GITHUB_ENV
     - name: Install dependencies
       run: |
         python -m pip install --upgrade uv
-        uv pip install build
+        uv pip install  --system build
     - name: Build package
       run: python -m build
     - name: Publish package
