--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,11 +57,6 @@ all = true
 [tool.ruff]
 line-length = 120
 
-
-# Enable Pyflakes `E` and `F` codes by default.
-select = ["E", "F"]
-ignore = ["E741", "E501"]
-
 # Exclude a variety of commonly ignored directories.
 exclude = [
     ".bzr",
@@ -84,21 +79,30 @@ exclude = [
     "node_modules",
     "venv",
 ]
-per-file-ignores = {}
-
-# Allow unused variables when underscore-prefixed.
-dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
 
 # Assume Python 3.10.
 target-version = "py310"
 
-[tool.ruff.flake8-import-conventions.aliases]
+[tool.ruff.lint]
+# Allow unused variables when underscore-prefixed.
+dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
+
+
+# Enable Pyflakes `E` and `F` codes by default.
+select = ["E", "F"]
+ignore = ["E741", "E501"]
+
+per-file-ignores = {}
+
+
+
+[tool.ruff.lint.flake8-import-conventions.aliases]
 altair = "alt"
 "matplotlib.pyplot" = "plt"
 numpy = "np"
 pandas = "pd"
 seaborn = "sns"
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 # Unlike Flake8, default to a complexity level of 10.
 max-complexity = 10
