--- a/.github/workflows/python-benchmarking.yml
+++ b/.github/workflows/python-benchmarking.yml
@@ -6,8 +6,6 @@ name: Python Benchmarking
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   benchmark:
@@ -25,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest mypy
+        pip install flake8 pytest pytest-benchmark mypy
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
     - name: Check install
