--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,23 @@ classifiers = [
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
 ]
+dependencies = [
+    'dill==0.3.9',
+    'lark==1.2.2',
+    'loguru==0.7.2',
+    'numpy==2.1.2',
+    'palettable==3.3.3',
+    'pandas==2.2.3',
+    'pathos==0.3.3',
+    'polyleven==0.8',
+    'pytest==8.3.3',
+    'pytest-benchmark==4.0.0',
+    'scikit-learn==1.5.2',
+    'seaborn==0.13.2',
+    'sympy==1.13.3',
+    'threadpoolctl==3.5.0',
+    'z3-solver==4.13.3.0',
+]
 
 [project.urls]
 homepage = "https://github.com/alcides/GeneticEngine/"
