--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,7 +52,7 @@ build-backend = 'setuptools.build_meta'
 requires = ['setuptools >= 67.6.0']
 
 [tool.setuptools]
-py-modules = ["geneticengine", "geml"]
+py-modules = ["geneticengine", "geml", "examples"]
 
 [tool.docformatter]
 syntax = 'google'
