Static Data and CSV

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,9 @@ include-package-data = true
 [tool.setuptools.packages.find]
 where = ["."]
 
+[tool.setuptools.package-data]
+'examples' = ['*.csv']
+
 [tool.docformatter]
 syntax = 'google'
 black = true
