--- a/.github/workflows/codspeed.yml
+++ b/.github/workflows/codspeed.yml
@@ -20,6 +20,8 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Install dev dependencies
+        run: pip install -r requirements-dev.txt
       - name: Install dependencies
         run: pip install -r requirements.txt
 
