--- a/.github/workflows/python-benchmarking.yml
+++ b/.github/workflows/python-benchmarking.yml
@@ -5,44 +5,52 @@ name: Python Benchmarking
 
 on:
   push:
-    branches: [ main ]
+    branches: ["*"]
+  pull_request:
+    branches: ["*"]
+
 
 jobs:
-  benchmark:
+  tests:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.13"]
 
     steps:
-    - uses: actions/checkout@v4.1.1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest pytest-benchmark mypy
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
-    - name: Check install
-      run: |
-        pip install -e .
-    - name: Test with pytest
-      run: |
-        pytest --benchmark-only --benchmark-json output.json
-    - name: Store benchmark result
-      uses: benchmark-action/github-action-benchmark@v1
-      with:
-        name: Python Benchmark with pytest-benchmark
-        tool: 'pytest'
-        output-file-path: output.json
-        # Use personal access token instead of GITHUB_TOKEN due to https://github.community/t/github-action-not-triggering-gh-pages-upon-push/16096
-        github-token: ${{ secrets.BENCHMARK_REPO_TOKEN }}
-        gh-repository: github.com/alcides/GeneticEngineBenchmarkResults
-        auto-push: true
-        # Show alert with commit comment on detecting possible performance regression
-        alert-threshold: '200%'
-        comment-on-alert: true
-        alert-comment-cc-users: '@alcides'
+      - uses: actions/checkout@v4
+      - name: Install the latest version of uv and set the python version
+        uses: astral-sh/setup-uv@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-dependency-glob: |
+            **/requirements*.txt
+            **/pyproject.toml
+      - name: Create venv
+        run: |
+          uv venv
+      - name: Install dependencies
+        run: |
+          if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
+          if [ -f requirements-dev.txt ]; then uv pip install -r requirements-dev.txt; fi
+      - name: Check install
+        run: |
+          uv pip install  -e .
+      - name: Test with pytest
+        run: |
+          uv run --frozen pytest --benchmark-only --benchmark-json output.json
+      - name: Store benchmark result
+        uses: benchmark-action/github-action-benchmark@v1
+        with:
+          name: Python Benchmark with pytest-benchmark
+          tool: 'pytest'
+          output-file-path: output.json
+          # Use personal access token instead of GITHUB_TOKEN due to https://github.community/t/github-action-not-triggering-gh-pages-upon-push/16096
+          github-token: ${{ secrets.BENCHMARK_REPO_TOKEN }}
+          gh-repository: github.com/alcides/GeneticEngineBenchmarkResults
+          auto-push: true
+          # Show alert with commit comment on detecting possible performance regression
+          alert-threshold: '200%'
+          comment-on-alert: true
+          alert-comment-cc-users: '@alcides'
