--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -8,30 +8,42 @@
 
 name: Upload Python Package
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ["main"]
+
 
 jobs:
-  deploy:
-
+  tests:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.13"]
 
     steps:
-    - uses: actions/checkout@v4.1.1
-    - name: Set up Python
-      uses: actions/setup-python@v5.0.0
-      with:
-        python-version: '3.x'
-    # - name: Set env
-    #   run: echo "VIRTUAL_ENV=$(python -c 'import sys; print(sys.prefix)')">> $GITHUB_ENV
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade uv
-        uv pip install  --system build
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      if: github.repository == 'alcides/GeneticEngine' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Install the latest version of uv and set the python version
+        uses: astral-sh/setup-uv@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-dependency-glob: |
+            **/requirements*.txt
+            **/pyproject.toml
+      - name: Create venv
+        run: |
+          uv venv
+      - name: Install dependencies
+        run: |
+          if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
+          if [ -f requirements-dev.txt ]; then uv pip install -r requirements-dev.txt; fi
+      - name: Lint with mypy
+        run: |
+          uv run mypy --no-strict-optional --ignore-missing-imports --explicit-package-bases geneticengine
+      - name: Check install
+        run: |
+          uv pip install  -e .
+      - name: Build package
+        run: uv build
+      - name: Publish
+        run: uv publish -t ${{ secrets.PYPI_API_TOKEN }}
