--- a/.github/workflows/run-examples.yml
+++ b/.github/workflows/run-examples.yml
@@ -14,25 +14,33 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.12"]
+        python-version: ["3.13"]
+
 
     steps:
-    - uses: actions/checkout@v4.1.1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v5
-      with:
-        python-version: ${{ matrix.python-version }}
-    # - name: Set env
-    #   run: echo "VIRTUAL_ENV=$(python -c 'import sys; print(sys.prefix)')">> $GITHUB_ENV
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade uv
-        uv pip install --system flake8 pytest mypy
-        if [ -f requirements.txt ]; then uv pip install --system -r requirements.txt; fi
-        if [ -f requirements-dev.txt ]; then uv pip install --system -r requirements-dev.txt; fi
-    - name: Check install
-      run: |
-        uv pip install --system -e .
-    - name: Run Examples Bash
-      run: |
-        bash run_examples.sh
+      - uses: actions/checkout@v4
+      - name: Install the latest version of uv and set the python version
+        uses: astral-sh/setup-uv@v4
+        with:
+          python-version: ${{ matrix.python-version }}
+          enable-cache: true
+          cache-dependency-glob: |
+            **/requirements*.txt
+            **/pyproject.toml
+      - name: Create venv
+        run: |
+          uv venv
+      - name: Install dependencies
+        run: |
+          if [ -f requirements.txt ]; then uv pip install -r requirements.txt; fi
+          if [ -f requirements-dev.txt ]; then uv pip install -r requirements-dev.txt; fi
+      - name: Lint with mypy
+        run: |
+          uv run mypy --no-strict-optional --ignore-missing-imports --explicit-package-bases geneticengine
+      - name: Check install
+        run: |
+          uv pip install  -e .
+      - name: Run Examples Bash
+        run: |
+          source .venv/bin/activate
+          bash run_examples.sh
