--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,4 @@ pip-selfcheck.json
 # End of https://www.toptal.com/developers/gitignore/api/python,venv,pycharm+all
 .DS_Store
 scratch*
+uv.lock
