--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,8 @@ repos:
     rev: v1.7.5
     hooks:
       - id: docformatter
+        additional_dependencies: [tomli]
+        args: [--in-place --config ./pyproject.toml]
 -   repo: https://github.com/hadialqattan/pycln
     rev: v2.4.0
     hooks:
