--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ classifiers = [
 ]
 dependencies = [
     'dill==0.4.0',
+    'egglog',
     'lark==1.3.1',
     'loguru==0.7.3',
     'numpy==2.2.6',
@@ -29,6 +30,7 @@ dependencies = [
     'polyleven==0.9.0',
     'pytest==8.4.2',
     'pytest-benchmark==5.2.0',
+    'pytest-xdist==3.8.0',
     'scikit-learn==1.7.2',
     'seaborn==0.13.2',
     'sympy==1.14.0',
